Fix ribbon x overflow

--- a/intranet/static/css/ribbon.scss
+++ b/intranet/static/css/ribbon.scss
@@ -15,8 +15,7 @@
 		left: 0;
 		margin: 0 auto;
 		right: 0;
-		overflow: auto;
-		overflow-y: hidden;
+		overflow: hidden;
 		@media screen and (max-width: 640px) {
 			zoom: 0.6;
 		}
